kubernetes/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: production
  labels:
    app: catalog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: catalog
        image: mehulbisen/catalog:1.0.0
        args: ["-text=catalog service"]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: production
spec:
  selector:
    app: catalog
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
