kubernetes/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: production
  labels:
    app: orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: orders
        image: mehulbisen/orders:1.0.0   # or hashicorp/http-echo: latest with args
        args: ["-text=orders service"]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: production
spec:
  selector:
    app: orders
  ports:
  - port: 80
    targetPort: 5678
  type: ClusterIP
