kubernetes/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: production
  labels:
    app: users
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: users
        image: mehulbisen/users:1.0.0
        args: ["-text=users service"]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: production
spec:
  selector:
    app: users
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
