kubernetes/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-south-1:478039851699:certificate/76744603-939c-490f-a1ed-d76003db10c5"
    alb.ingress.kubernetes.io/target-type: ip
    # optional: healthcheck path/timeouts per ALB doc
spec:
  rules:
  - host: frontend.myapp.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: api.myapp.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
  - host: orders.myapp.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orders
            port:
              number: 80
  - host: catalog.myapp.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: catalog
            port:
              number: 80
  - host: users.myapp.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 80
